--- a/Spark/PracticePySpark.ipynb
+++ b/Spark/PracticePySpark.ipynb
@@ -6,11 +6,11 @@
    "id": "c837d0f2",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-05-27T11:00:00.634864Z",
-     "iopub.status.busy": "2025-05-27T11:00:00.629243Z",
-     "iopub.status.idle": "2025-05-27T11:00:00.808373Z",
-     "shell.execute_reply": "2025-05-27T11:00:00.807143Z",
-     "shell.execute_reply.started": "2025-05-27T11:00:00.634808Z"
+     "iopub.execute_input": "2025-05-28T06:39:35.828699Z",
+     "iopub.status.busy": "2025-05-28T06:39:35.820503Z",
+     "iopub.status.idle": "2025-05-28T06:39:36.031648Z",
+     "shell.execute_reply": "2025-05-28T06:39:36.029800Z",
+     "shell.execute_reply.started": "2025-05-28T06:39:35.828571Z"
     },
     "tags": []
    },
@@ -25,11 +25,11 @@
    "id": "b70e7f30",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-05-27T11:00:01.328592Z",
-     "iopub.status.busy": "2025-05-27T11:00:01.326991Z",
-     "iopub.status.idle": "2025-05-27T11:00:01.335192Z",
-     "shell.execute_reply": "2025-05-27T11:00:01.333651Z",
-     "shell.execute_reply.started": "2025-05-27T11:00:01.328522Z"
+     "iopub.execute_input": "2025-05-28T06:39:36.573117Z",
+     "iopub.status.busy": "2025-05-28T06:39:36.572003Z",
+     "iopub.status.idle": "2025-05-28T06:39:36.578246Z",
+     "shell.execute_reply": "2025-05-28T06:39:36.576943Z",
+     "shell.execute_reply.started": "2025-05-28T06:39:36.573054Z"
     },
     "tags": []
    },
@@ -44,11 +44,11 @@
    "id": "2695e635",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-05-27T11:00:01.912862Z",
-     "iopub.status.busy": "2025-05-27T11:00:01.911601Z",
-     "iopub.status.idle": "2025-05-27T11:00:14.438117Z",
-     "shell.execute_reply": "2025-05-27T11:00:14.435386Z",
-     "shell.execute_reply.started": "2025-05-27T11:00:01.912812Z"
+     "iopub.execute_input": "2025-05-28T06:39:37.166944Z",
+     "iopub.status.busy": "2025-05-28T06:39:37.166438Z",
+     "iopub.status.idle": "2025-05-28T06:39:49.553710Z",
+     "shell.execute_reply": "2025-05-28T06:39:49.551721Z",
+     "shell.execute_reply.started": "2025-05-28T06:39:37.166899Z"
     },
     "tags": []
    },
@@ -60,7 +60,7 @@
       "Using Spark's default log4j profile: org/apache/spark/log4j-defaults.properties\n",
       "Setting default log level to \"WARN\".\n",
       "To adjust logging level use sc.setLogLevel(newLevel). For SparkR, use setLogLevel(newLevel).\n",
-      "25/05/27 14:00:04 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n",
+      "25/05/28 09:39:40 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n",
       "                                                                                \r"
      ]
     },
@@ -77,6 +77,30 @@
    ],
    "source": [
     "# создание сессии с помощью SparkSession\n",
+    "\n",
+    "\n",
+    "# метод .config() - при создании сессии, метод .set() - после создания\n",
+    "\n",
+    "\n",
+    "# НАСТРОЙКА СТАТИЧЕСКОЙ АЛЛОКАЦИИ\n",
+    " # .set(\"spark.driver.memory\", \"2g\")\n",
+    " #            .set(\"spark.driver.cores\", 2) #Задаем только в Cluster Mode  \n",
+    " #            .set(\"spark.executor.cores\", 5) \n",
+    " #            .set(\"spark.executor.instances\", 3) \n",
+    " #            .set(\"spark.dynamicAllocation.enabled\",'false')\n",
+    " #            .set(\"spark.master\", \"yarn\")\n",
+    " #            .set(\"spark.submit.deploymode\", \"client\")\n",
+    "\n",
+    "# НАСТРОЙКА ДИНАМИЧЕСКОЙ АЛЛОКАЦИИ\n",
+    "            # .set(\"spark.driver.memory\", \"2g\")\n",
+    "            # .set(\"spark.driver.cores\", 2) #Задаем только в Cluster Mode \n",
+    "            # .set(\"spark.executor.cores\", 5) \n",
+    "            # .set(\"spark.submit.deploymode\", \"client\")\n",
+    "            # .set(\"spark.dynamicAllocation.enabled\", \"true\")\n",
+    "            # .set(\"spark.dynamicAllocation.initialExecutors\", \"1\")\n",
+    "            # .set(\"spark.dynamicAllocation.minExecutors\", \"0\")\n",
+    "            # .set(\"spark.dynamicAllocation.maxExecutors\", \"3\")\n",
+    "            # .set(\"spark.dynamicAllocation.executorIdleTimeout\", \"360s\")\n",
     "\n",
     "spark = SparkSession.builder.appName('Practice').getOrCreate()\n",
     "\n",
@@ -139,15 +163,23 @@
    "id": "943d8f45",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-05-27T11:00:18.448902Z",
-     "iopub.status.busy": "2025-05-27T11:00:18.448288Z",
-     "iopub.status.idle": "2025-05-27T11:00:20.175686Z",
-     "shell.execute_reply": "2025-05-27T11:00:20.173291Z",
-     "shell.execute_reply.started": "2025-05-27T11:00:18.448854Z"
+     "iopub.execute_input": "2025-05-28T06:49:53.786837Z",
+     "iopub.status.busy": "2025-05-28T06:49:53.781524Z",
+     "iopub.status.idle": "2025-05-28T06:49:56.304653Z",
+     "shell.execute_reply": "2025-05-28T06:49:56.303703Z",
+     "shell.execute_reply.started": "2025-05-28T06:49:53.786767Z"
     },
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                                                \r"
+     ]
+    }
+   ],
    "source": [
     "# чтение фрейма данных\n",
     "\n",
@@ -172,39 +204,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "ad588fb9",
    "metadata": {
-    "execution": {
-     "iopub.execute_input": "2025-05-27T11:00:25.572566Z",
-     "iopub.status.busy": "2025-05-27T11:00:25.572027Z",
-     "iopub.status.idle": "2025-05-27T11:00:25.653420Z",
-     "shell.execute_reply": "2025-05-27T11:00:25.644298Z",
-     "shell.execute_reply.started": "2025-05-27T11:00:25.572522Z"
-    },
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "root\n",
-      " |-- campaign_cd: string (nullable = true)\n",
-      " |-- campaign_nm: string (nullable = true)\n",
-      " |-- name_cvm: string (nullable = true)\n",
-      " |-- global_code: string (nullable = true)\n",
-      " |-- global_name: string (nullable = true)\n",
-      " |-- regid: integer (nullable = true)\n",
-      " |-- service: double (nullable = true)\n",
-      " |-- cvm: string (nullable = true)\n",
-      " |-- contur: string (nullable = true)\n",
-      " |-- product: string (nullable = true)\n",
-      " |-- dayy: integer (nullable = true)\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# вывод схемы\n",
     "\n",
@@ -213,40 +218,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "cce3070a",
    "metadata": {
-    "execution": {
-     "iopub.execute_input": "2025-05-27T11:00:30.609053Z",
-     "iopub.status.busy": "2025-05-27T11:00:30.607455Z",
-     "iopub.status.idle": "2025-05-27T11:00:30.624077Z",
-     "shell.execute_reply": "2025-05-27T11:00:30.622925Z",
-     "shell.execute_reply.started": "2025-05-27T11:00:30.608982Z"
-    },
     "tags": []
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['campaign_cd',\n",
-       " 'campaign_nm',\n",
-       " 'name_cvm',\n",
-       " 'global_code',\n",
-       " 'global_name',\n",
-       " 'regid',\n",
-       " 'service',\n",
-       " 'cvm',\n",
-       " 'contur',\n",
-       " 'product',\n",
-       " 'dayy']"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# получение колонок\n",
     "\n",
@@ -263,6 +240,7 @@
    "outputs": [],
    "source": [
     "# получение кортежа из строк\n",
+    "\n",
     "df_spark.head(1)[0]"
    ]
   },
@@ -296,6 +274,29 @@
     "# Добавление поля\n",
     "\n",
     "df_spark = df_spark.withColumn(\"new_column\", df_spark['regid']+1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "5f92711c-11c8-46e9-91ac-6d66773b10da",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-05-28T06:51:16.558565Z",
+     "iopub.status.busy": "2025-05-28T06:51:16.558080Z",
+     "iopub.status.idle": "2025-05-28T06:51:16.654223Z",
+     "shell.execute_reply": "2025-05-28T06:51:16.653271Z",
+     "shell.execute_reply.started": "2025-05-28T06:51:16.558527Z"
+    },
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "# добавление поля с константным выражением\n",
+    "\n",
+    "from pyspark.sql.functions import lit\n",
+    "\n",
+    "df_spark = df_spark.withColumn(\"const_column\", lit(500))"
    ]
   },
   {
@@ -603,16 +604,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "d28cc416-4861-42b1-ac2c-ebd8fe2ac569",
    "metadata": {
-    "execution": {
-     "iopub.execute_input": "2025-05-27T11:02:53.654736Z",
-     "iopub.status.busy": "2025-05-27T11:02:53.653848Z",
-     "iopub.status.idle": "2025-05-27T11:02:53.715018Z",
-     "shell.execute_reply": "2025-05-27T11:02:53.713270Z",
-     "shell.execute_reply.started": "2025-05-27T11:02:53.654662Z"
-    }
+    "tags": []
    },
    "outputs": [],
    "source": [
@@ -627,7 +622,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2f687f42-e541-41e9-988d-5951f14539b1",
+   "id": "3daf07d7-6d17-453f-a7d8-491ffd53ff50",
    "metadata": {},
    "outputs": [],
    "source": []
