--- a/Spark/PracticePySpark.ipynb
+++ b/Spark/PracticePySpark.ipynb
@@ -6,11 +6,11 @@
    "id": "c837d0f2",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-05-28T06:39:35.828699Z",
-     "iopub.status.busy": "2025-05-28T06:39:35.820503Z",
-     "iopub.status.idle": "2025-05-28T06:39:36.031648Z",
-     "shell.execute_reply": "2025-05-28T06:39:36.029800Z",
-     "shell.execute_reply.started": "2025-05-28T06:39:35.828571Z"
+     "iopub.execute_input": "2025-06-03T06:44:28.765371Z",
+     "iopub.status.busy": "2025-06-03T06:44:28.763849Z",
+     "iopub.status.idle": "2025-06-03T06:44:28.913768Z",
+     "shell.execute_reply": "2025-06-03T06:44:28.912527Z",
+     "shell.execute_reply.started": "2025-06-03T06:44:28.765302Z"
     },
     "tags": []
    },
@@ -25,11 +25,11 @@
    "id": "b70e7f30",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-05-28T06:39:36.573117Z",
-     "iopub.status.busy": "2025-05-28T06:39:36.572003Z",
-     "iopub.status.idle": "2025-05-28T06:39:36.578246Z",
-     "shell.execute_reply": "2025-05-28T06:39:36.576943Z",
-     "shell.execute_reply.started": "2025-05-28T06:39:36.573054Z"
+     "iopub.execute_input": "2025-06-03T06:44:29.729516Z",
+     "iopub.status.busy": "2025-06-03T06:44:29.727937Z",
+     "iopub.status.idle": "2025-06-03T06:44:29.735530Z",
+     "shell.execute_reply": "2025-06-03T06:44:29.734101Z",
+     "shell.execute_reply.started": "2025-06-03T06:44:29.729445Z"
     },
     "tags": []
    },
@@ -44,11 +44,11 @@
    "id": "2695e635",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-05-28T06:39:37.166944Z",
-     "iopub.status.busy": "2025-05-28T06:39:37.166438Z",
-     "iopub.status.idle": "2025-05-28T06:39:49.553710Z",
-     "shell.execute_reply": "2025-05-28T06:39:49.551721Z",
-     "shell.execute_reply.started": "2025-05-28T06:39:37.166899Z"
+     "iopub.execute_input": "2025-06-03T06:44:32.745675Z",
+     "iopub.status.busy": "2025-06-03T06:44:32.744774Z",
+     "iopub.status.idle": "2025-06-03T06:44:45.604266Z",
+     "shell.execute_reply": "2025-06-03T06:44:45.602671Z",
+     "shell.execute_reply.started": "2025-06-03T06:44:32.745634Z"
     },
     "tags": []
    },
@@ -60,7 +60,8 @@
       "Using Spark's default log4j profile: org/apache/spark/log4j-defaults.properties\n",
       "Setting default log level to \"WARN\".\n",
       "To adjust logging level use sc.setLogLevel(newLevel). For SparkR, use setLogLevel(newLevel).\n",
-      "25/05/28 09:39:40 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n",
+      "25/06/03 09:44:35 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n",
+      "25/06/03 09:44:37 WARN Utils: Service 'SparkUI' could not bind on port 4040. Attempting port 4041.\n",
       "                                                                                \r"
      ]
     },
@@ -163,23 +164,15 @@
    "id": "943d8f45",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-05-28T06:49:53.786837Z",
-     "iopub.status.busy": "2025-05-28T06:49:53.781524Z",
-     "iopub.status.idle": "2025-05-28T06:49:56.304653Z",
-     "shell.execute_reply": "2025-05-28T06:49:56.303703Z",
-     "shell.execute_reply.started": "2025-05-28T06:49:53.786767Z"
+     "iopub.execute_input": "2025-06-03T06:45:05.579919Z",
+     "iopub.status.busy": "2025-06-03T06:45:05.579063Z",
+     "iopub.status.idle": "2025-06-03T06:45:07.213114Z",
+     "shell.execute_reply": "2025-06-03T06:45:07.211915Z",
+     "shell.execute_reply.started": "2025-06-03T06:45:05.579862Z"
     },
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "                                                                                \r"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# чтение фрейма данных\n",
     "\n",
@@ -278,16 +271,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "5f92711c-11c8-46e9-91ac-6d66773b10da",
    "metadata": {
-    "execution": {
-     "iopub.execute_input": "2025-05-28T06:51:16.558565Z",
-     "iopub.status.busy": "2025-05-28T06:51:16.558080Z",
-     "iopub.status.idle": "2025-05-28T06:51:16.654223Z",
-     "shell.execute_reply": "2025-05-28T06:51:16.653271Z",
-     "shell.execute_reply.started": "2025-05-28T06:51:16.558527Z"
-    },
     "tags": []
    },
    "outputs": [],
@@ -621,8 +607,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "3daf07d7-6d17-453f-a7d8-491ffd53ff50",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-06-03T07:10:43.370034Z",
+     "iopub.status.busy": "2025-06-03T07:10:43.368625Z",
+     "iopub.status.idle": "2025-06-03T07:10:44.538823Z",
+     "shell.execute_reply": "2025-06-03T07:10:44.537276Z",
+     "shell.execute_reply.started": "2025-06-03T07:10:43.369981Z"
+    },
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[Stage 6:>                                                          (0 + 1) / 1]\r"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+-------+-----------+--------------------+--------------------+---------------+--------------------+------------------+------------------+-----------+------+--------+------------------+\n",
+      "|summary|campaign_cd|         campaign_nm|            name_cvm|    global_code|         global_name|             regid|           service|        cvm|contur| product|              dayy|\n",
+      "+-------+-----------+--------------------+--------------------+---------------+--------------------+------------------+------------------+-----------+------+--------+------------------+\n",
+      "|  count|       4276|                4276|                4306|           4306|                4306|              4306|              4306|       4306|  4306|    4306|              4306|\n",
+      "|   mean|       null|                null|                null|           null|                null| 65.01416627960985|120860.38015582653|       null|  null|    null|29.777055271713888|\n",
+      "| stddev|       null|                null|                null|           null|                null|10.199976496260218| 45939.84912316928|       null|  null|    null| 5.520229359911304|\n",
+      "|    min|CAMP1004589| 0316_RTM_Back_Voice|50 SMS в поездках...|BILL_0000001180|10 минут для звон...|                 0|               0.0|CVMB2B-1005|   b2c|Mob_core|                 0|\n",
+      "|    max|CAMP1031287|b2b_turbo_button_...|       Черный список|            нет|                 нет|                71|        502981.066|        нет|   b2c|     нет|                90|\n",
+      "+-------+-----------+--------------------+--------------------+---------------+--------------------+------------------+------------------+-----------+------+--------+------------------+\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                                                \r"
+     ]
+    }
+   ],
+   "source": [
+    "# получить статистику по таблице\n",
+    "\n",
+    "df_spark.describe().show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0a10cc83-128a-49c9-bcd0-335b8bab8d95",
    "metadata": {},
    "outputs": [],
    "source": []
