--- a/Spark/PracticePySpark.ipynb
+++ b/Spark/PracticePySpark.ipynb
@@ -2,16 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "c837d0f2",
    "metadata": {
-    "execution": {
-     "iopub.execute_input": "2025-06-03T06:44:28.765371Z",
-     "iopub.status.busy": "2025-06-03T06:44:28.763849Z",
-     "iopub.status.idle": "2025-06-03T06:44:28.913768Z",
-     "shell.execute_reply": "2025-06-03T06:44:28.912527Z",
-     "shell.execute_reply.started": "2025-06-03T06:44:28.765302Z"
-    },
     "tags": []
    },
    "outputs": [],
@@ -21,16 +14,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "b70e7f30",
    "metadata": {
-    "execution": {
-     "iopub.execute_input": "2025-06-03T06:44:29.729516Z",
-     "iopub.status.busy": "2025-06-03T06:44:29.727937Z",
-     "iopub.status.idle": "2025-06-03T06:44:29.735530Z",
-     "shell.execute_reply": "2025-06-03T06:44:29.734101Z",
-     "shell.execute_reply.started": "2025-06-03T06:44:29.729445Z"
-    },
     "tags": []
    },
    "outputs": [],
@@ -40,42 +26,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "2695e635",
    "metadata": {
-    "execution": {
-     "iopub.execute_input": "2025-06-03T06:44:32.745675Z",
-     "iopub.status.busy": "2025-06-03T06:44:32.744774Z",
-     "iopub.status.idle": "2025-06-03T06:44:45.604266Z",
-     "shell.execute_reply": "2025-06-03T06:44:45.602671Z",
-     "shell.execute_reply.started": "2025-06-03T06:44:32.745634Z"
-    },
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Using Spark's default log4j profile: org/apache/spark/log4j-defaults.properties\n",
-      "Setting default log level to \"WARN\".\n",
-      "To adjust logging level use sc.setLogLevel(newLevel). For SparkR, use setLogLevel(newLevel).\n",
-      "25/06/03 09:44:35 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n",
-      "25/06/03 09:44:37 WARN Utils: Service 'SparkUI' could not bind on port 4040. Attempting port 4041.\n",
-      "                                                                                \r"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "'hello spark'"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# создание сессии с помощью SparkSession\n",
     "\n",
@@ -160,16 +116,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "943d8f45",
    "metadata": {
-    "execution": {
-     "iopub.execute_input": "2025-06-03T06:45:05.579919Z",
-     "iopub.status.busy": "2025-06-03T06:45:05.579063Z",
-     "iopub.status.idle": "2025-06-03T06:45:07.213114Z",
-     "shell.execute_reply": "2025-06-03T06:45:07.211915Z",
-     "shell.execute_reply.started": "2025-06-03T06:45:05.579862Z"
-    },
     "tags": []
    },
    "outputs": [],
@@ -607,50 +556,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "3daf07d7-6d17-453f-a7d8-491ffd53ff50",
    "metadata": {
-    "execution": {
-     "iopub.execute_input": "2025-06-03T07:10:43.370034Z",
-     "iopub.status.busy": "2025-06-03T07:10:43.368625Z",
-     "iopub.status.idle": "2025-06-03T07:10:44.538823Z",
-     "shell.execute_reply": "2025-06-03T07:10:44.537276Z",
-     "shell.execute_reply.started": "2025-06-03T07:10:43.369981Z"
-    },
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[Stage 6:>                                                          (0 + 1) / 1]\r"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "+-------+-----------+--------------------+--------------------+---------------+--------------------+------------------+------------------+-----------+------+--------+------------------+\n",
-      "|summary|campaign_cd|         campaign_nm|            name_cvm|    global_code|         global_name|             regid|           service|        cvm|contur| product|              dayy|\n",
-      "+-------+-----------+--------------------+--------------------+---------------+--------------------+------------------+------------------+-----------+------+--------+------------------+\n",
-      "|  count|       4276|                4276|                4306|           4306|                4306|              4306|              4306|       4306|  4306|    4306|              4306|\n",
-      "|   mean|       null|                null|                null|           null|                null| 65.01416627960985|120860.38015582653|       null|  null|    null|29.777055271713888|\n",
-      "| stddev|       null|                null|                null|           null|                null|10.199976496260218| 45939.84912316928|       null|  null|    null| 5.520229359911304|\n",
-      "|    min|CAMP1004589| 0316_RTM_Back_Voice|50 SMS в поездках...|BILL_0000001180|10 минут для звон...|                 0|               0.0|CVMB2B-1005|   b2c|Mob_core|                 0|\n",
-      "|    max|CAMP1031287|b2b_turbo_button_...|       Черный список|            нет|                 нет|                71|        502981.066|        нет|   b2c|     нет|                90|\n",
-      "+-------+-----------+--------------------+--------------------+---------------+--------------------+------------------+------------------+-----------+------+--------+------------------+\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "                                                                                \r"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# получить статистику по таблице\n",
     "\n",
@@ -661,6 +572,20 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "0a10cc83-128a-49c9-bcd0-335b8bab8d95",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "# получить уникальный фрейм данных \n",
+    "\n",
+    "df_spark.distinct()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "834f3772-c6e3-4224-bdd4-eedd7cb5d3e0",
    "metadata": {},
    "outputs": [],
    "source": []
