--- a/Spark/PracticePySpark.ipynb
+++ b/Spark/PracticePySpark.ipynb
@@ -147,6 +147,20 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "993aaa5a-1ae7-4cab-a781-a9b73afae06c",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "# получение первой строки\n",
+    "\n",
+    "df_spark.first()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "ad588fb9",
    "metadata": {
     "tags": []
@@ -581,14 +595,6 @@
     "\n",
     "df_spark.distinct()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "834f3772-c6e3-4224-bdd4-eedd7cb5d3e0",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
