--- a/Spark/PracticePySpark.ipynb
+++ b/Spark/PracticePySpark.ipynb
@@ -161,6 +161,20 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "34f165d1-f810-4a1d-bb84-dd3f85faf8ae",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "# получение последних строк\n",
+    "\n",
+    "df_spark.tail(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "ad588fb9",
    "metadata": {
     "tags": []
@@ -216,6 +230,20 @@
     "# df_spark['regid', 'dayy'].show()\n",
     "\n",
     "#df.regid"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0bf37466-0c50-461c-9fe4-8bbda154c537",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "# Позволяет делать сразу агрегацию по столбцам в выборке из фрейма\n",
+    "\n",
+    "df_spark_new = df_spark.selectExpr('max(dayy) as max_dayy')"
    ]
   },
   {
@@ -396,6 +424,28 @@
     "data = [('Lucy', 10, 3_000),('Tanya', 35, 200_000), ('Kolya', 15, 0)]\n",
     "\n",
     "df = spark.createDataFrame(data, ['name', 'age', 'money'])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "038af0d6-7ada-4d37-9626-b405c93bc39a",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "from pyspark.sql.types import StructType, StructField, IntegerType, StringType\n",
+    "\n",
+    "# Определите схему\n",
+    "schema = StructType([\n",
+    "    StructField(\"name\", StringType(), True),\n",
+    "    StructField(\"age\", StringType(), True),\n",
+    "    StructField(\"money\", IntegerType(), True)\n",
+    "])\n",
+    "\n",
+    "# Затем вы можете использовать эту схему при чтении данных:\n",
+    "df = spark.createDataFrame(data, schema=schema)"
    ]
   },
   {
@@ -595,6 +645,28 @@
     "\n",
     "df_spark.distinct()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "60306c52-ae68-4d81-8d45-25249008f1b5",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "# ковертировать фрейм pySpark в Pandas (чтобы применять к нему операции из Pandas)\n",
+    "\n",
+    "df = df_spark.toPandas()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2b9075c4-fb88-46cb-8552-d5bcbe0440c8",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
